[package]
name = "exdev_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3.0"
dotenv = "0.15.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
sqlx = { version = "0.6", features = [ "sqlite", "runtime-actix-rustls" ] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
